@@ -137,14 +137,14 @@ public class TestGosenTokenizer extends BaseTokenStreamTestCase {
         new String[] { "これ", "は", "本", "で", "は", "ない" },
         new int[] { 0, 2, 3, 4, 5, 6 },
         new int[] { 2, 3, 4, 5, 6, 8 },
-        new Integer(8)
+        Integer.valueOf(8)
     );
     
     assertTokenStreamContents(analyzer.reusableTokenStream("foo", new StringReader("これは本ではない    ")),
         new String[] { "これ", "は", "本", "で", "は", "ない" },
         new int[] { 0, 2, 3, 4, 5, 6 },
         new int[] { 2, 3, 4, 5, 6, 8 },
-        new Integer(12)
+        Integer.valueOf(12)
     );
   }
 }
